[gd_scene load_steps=13 format=3 uid="uid://bamn4ssgqwx4c"]

[ext_resource type="Script" path="res://scenes/ui.gd" id="1_jivp1"]
[ext_resource type="Script" path="res://scenes/sub_viewport.gd" id="3_wrbff"]
[ext_resource type="Texture2D" uid="uid://cltcgbeciimd1" path="res://assets/EnemyMarker.png" id="4_2qoty"]
[ext_resource type="Texture2D" uid="uid://ka37fl8au5rm" path="res://assets/PlayerMarker.png" id="4_axa78"]
[ext_resource type="Texture2D" uid="uid://dgd04yolvs20t" path="res://assets/MiniMap.png" id="4_edwwg"]
[ext_resource type="Texture2D" uid="uid://bdovm2h8socp0" path="res://assets/AlertMarker.png" id="5_nn277"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ts838"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u1n4b"]
bg_color = Color(0.905254, 0, 0.0149213, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8er42"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m14jr"]
bg_color = Color(0, 0.633052, 0.966609, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ccrrq"]
bg_color = Color(0, 0, 0, 0.65098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6laru"]
bg_color = Color(0.883011, 0.481476, 1.15514e-06, 1)

[node name="UI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_jivp1")

[node name="AmmoCounter" type="Panel" parent="."]
offset_left = 104.0
offset_top = 633.0
offset_right = 174.0
offset_bottom = 673.0

[node name="AmmoLabel" type="Label" parent="AmmoCounter"]
layout_mode = 0
offset_right = 70.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 10
text = "AMMO: 15/15 
MAGS: 3/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyCounter" type="Panel" parent="."]
offset_left = 19.0
offset_top = 17.0
offset_right = 188.0
offset_bottom = 63.0

[node name="EnemiesLabel" type="Label" parent="EnemyCounter"]
layout_mode = 0
offset_right = 169.0
offset_bottom = 46.0
text = "ENMIES LEFT: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PowerupTeller" type="Panel" parent="."]
offset_left = 479.0
offset_top = 633.0
offset_right = 569.0
offset_bottom = 673.0

[node name="PowerupLabel" type="Label" parent="PowerupTeller"]
layout_mode = 0
offset_right = 90.0
offset_bottom = 40.0
theme_override_font_sizes/font_size = 10
text = "POWERUP:
NONE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = 603.0
offset_top = 673.0
offset_right = 703.0
offset_bottom = 693.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_ts838")
theme_override_styles/fill = SubResource("StyleBoxFlat_u1n4b")
max_value = 200.0
value = 200.0
show_percentage = false

[node name="SheildBar" type="ProgressBar" parent="."]
offset_left = 578.0
offset_top = 673.0
offset_right = 678.0
offset_bottom = 693.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_8er42")
theme_override_styles/fill = SubResource("StyleBoxFlat_m14jr")
max_value = 200.0
value = 200.0
show_percentage = false

[node name="AdrenalineBar" type="ProgressBar" parent="."]
offset_left = 733.0
offset_top = 673.0
offset_right = 833.0
offset_bottom = 693.0
rotation = -1.5708
theme_override_styles/background = SubResource("StyleBoxFlat_ccrrq")
theme_override_styles/fill = SubResource("StyleBoxFlat_6laru")
max_value = 1.0
show_percentage = false

[node name="PauseButton" type="Button" parent="."]
offset_left = 15.0
offset_top = 610.0
offset_right = 79.0
offset_bottom = 672.0
text = "PAUSE"

[node name="PrimaryWeaponSelection" type="Button" parent="."]
offset_left = 179.0
offset_top = 633.0
offset_right = 316.0
offset_bottom = 673.0
theme_override_font_sizes/font_size = 15
text = "PRIMARY: PISTOL"

[node name="KeyboardNumberedIndex" type="Label" parent="PrimaryWeaponSelection"]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 21.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 15
text = "(1)"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SecondaryWeaponSelection" type="Button" parent="."]
offset_left = 318.0
offset_top = 633.0
offset_right = 474.0
offset_bottom = 673.0
theme_override_font_sizes/font_size = 15
text = "SECONDARY: PISTOL"

[node name="KeyboardNumberedIndex" type="Label" parent="SecondaryWeaponSelection"]
layout_mode = 0
offset_left = 2.0
offset_top = -5.0
offset_right = 21.0
offset_bottom = 17.0
theme_override_font_sizes/font_size = 15
text = "(2)"

[node name="RoomCounter" type="Panel" parent="."]
offset_left = 580.0
offset_top = 17.0
offset_right = 749.0
offset_bottom = 63.0

[node name="RoomLabel" type="Label" parent="RoomCounter"]
layout_mode = 0
offset_right = 169.0
offset_bottom = 46.0
text = "ROOM: 0
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Minimap" type="SubViewportContainer" parent="."]
offset_left = 628.0
offset_top = 573.0
offset_right = 728.0
offset_bottom = 673.0

[node name="SubViewport" type="SubViewport" parent="Minimap"]
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4
script = ExtResource("3_wrbff")

[node name="AlertMarker" type="Sprite2D" parent="Minimap/SubViewport"]
visible = false
texture = ExtResource("5_nn277")

[node name="Background" type="Sprite2D" parent="Minimap/SubViewport"]
texture = ExtResource("4_edwwg")
centered = false

[node name="Camera2D" type="Camera2D" parent="Minimap/SubViewport"]
zoom = Vector2(0.13, 0.13)

[node name="EnemyMarker" type="Sprite2D" parent="Minimap/SubViewport"]
visible = false
texture = ExtResource("4_2qoty")

[node name="PlayerMarker" type="Sprite2D" parent="Minimap"]
position = Vector2(50, 50)
scale = Vector2(0.13, 0.13)
texture = ExtResource("4_axa78")

[connection signal="mouse_entered" from="PauseButton" to="." method="_on_pause_button_mouse_entered"]
[connection signal="mouse_exited" from="PauseButton" to="." method="_on_pause_button_mouse_exited"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
[connection signal="mouse_entered" from="PrimaryWeaponSelection" to="." method="_on_primary_weapon_selection_mouse_entered"]
[connection signal="mouse_exited" from="PrimaryWeaponSelection" to="." method="_on_primary_weapon_selection_mouse_exited"]
[connection signal="pressed" from="PrimaryWeaponSelection" to="." method="_on_primary_weapon_selection_pressed"]
[connection signal="mouse_entered" from="SecondaryWeaponSelection" to="." method="_on_primary_weapon_selection_mouse_entered"]
[connection signal="mouse_exited" from="SecondaryWeaponSelection" to="." method="_on_primary_weapon_selection_mouse_exited"]
[connection signal="pressed" from="SecondaryWeaponSelection" to="." method="_on_secondary_weapon_selection_pressed"]
